# src/main/java/hu/pannonuni/routerangers/value/Role.java
@@ -1,0 +1,5 @@
+package hu.pannonuni.routerangers.value;
+
+public enum Role {
+    ADMIN, USER
+}
